[package]
name = "spacerun"
version = "0.1.0"
authors = ["Pascal Ernst <linucc@linu.cc>", "Florian Diebold <flodiebold@gmail.com>"]

edition = "2018"

[dependencies]
azul = { git = "https://github.com/linucc/azul", rev = "ce533867ec26b34229f525d0ce523a0ddd94c88a" }
serde = "1"
serde_derive = "1"
serde_json = "1.0"
find_folder = "0.3.0"
directories = "1.0"
structopt = "0.2"
regex = "1"
